# SoundScape

./: .gitignore  .gitignore.txt  CMakeLists.txt
Code - iOS (xCode - C++)/SoundScape/SoundScape/: ContentView.swift
Code - iOS (xCode - C++)/SoundScape/SoundScape.xcodeproj/: project.pbxproj
Code - iOS (xCode - C++)/SoundScape/SoundScapeExtension/Parameters/: SoundScapeExtensionParameterAddresses.h
SoundScape/: SoundScape.jucer
SoundScape/Builds/VisualStudio2022/: SoundScape.sln  SoundScape_App.vcxproj  SoundScape_App.vcxproj.filters  resources.rc
SoundScape/JuceLibraryCode/: JuceHeader.h
SoundScape/Source/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h
code-ios/SoundScape/SoundScape/: Preset.swift
mac/SoundScape/SoundScape/: AudioSource.swift  ContentView.swift  SoundScapeApp.swift
mac/SoundScape/SoundScape.xcodeproj/: project.pbxproj
mac/SoundScape/SoundScape/Common/: TypeAliases.swift
mac/SoundScape/SoundScape/Model/: AudioUnitHostModel.swift  (+1 more)
mac/SoundScape/SoundScapeExtension/: Info.plist  README.md
mac/SoundScape/SoundScapeTests/: SoundScapeTests.swift
mac/SoundScape/SoundScapeUITests/: SoundScapeUITests.swift  SoundScapeUITestsLaunchTests.swift
planning/: Personal Project Ideas.docx
windows/SoundScape/: SoundScape.sln  SoundScape.uproject
windows/SoundScape/Config/: DefaultEngine.ini  DefaultGame.ini
windows/SoundScape/SoundScape/: Resource.h  SoundScape.cpp  SoundScape.rc  SoundScape.vcxproj  SoundScape.vcxproj.filters
windows/SoundScape/Source/: SoundScape.Target.cs  SoundScapeEditor.Target.cs
(+26 files in other folders)
